<resources>
    <string name="app_name">madcamp_week01</string>
    <string name="address">Address</string>
    <string name="gallery">Gallery</string>
    <string name="free">Workout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addressName">Name</string>
    <string name="newcontact">New Address</string>
    <string name="editcontact">Edit Address</string>
    <string name="addphoto">Add Photo</string>
    <string name="complete">Complete</string>
    <string name="schedule">Workout Record</string>
    <string name="select_option">Select an Option</string>
    <string name="todayDiet"><b>오늘의 식단</b></string>
    <string name="todayWorkout"><b>오늘의 운동</b></string>
    <string name="exerciseType"><b>운동 종류</b></string>
    <string name="exerciseTime"><b>운동 시간</b></string>
    <string name="noexercise">(운동 기록 없음)</string>
    <string name="profilename">(Name)</string>
    <string name="tagprofile">(Add a tag for your friend)</string>
    <string name="delete">Delete this address</string>
    <string name="phonetitle">phone</string>
    <string name="alarm">Delete</string>
    <string name="alarmtext">The address will be removed permanently</string>
    <string name="edit">Edit Photo</string>
    <string name="breakfast">아침</string>
    <string name="lunch">점심</string>
    <string name="dinner">저녁</string>
</resources>