<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calendarFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clickable="true"
    tools:context=".Free">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#FFFFFF"
            android:text="@string/schedule"
            android:fontFamily="@font/myfont"
            android:textColor="#000000"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="24dp" />

        <CalendarView
            android:id="@+id/calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/bottomsheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="10dp"
        android:elevation="10dp"
        app:behavior_hideable="false"
        app:behavior_peekHeight="303.5dp"
        app:cardCornerRadius="36dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior" >

        <TextView
            android:id="@+id/diet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25sp"
            android:layout_marginTop="50sp"
            android:textSize="23sp"
            android:fontFamily="@font/myfont"
            android:text="@string/todayDiet" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100sp"
            android:layout_marginStart="15sp"
            android:layout_gravity="left"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/breakfast"
                android:layout_width="120sp"
                android:layout_height="120sp"
                android:scaleType="centerCrop"
                android:background="@drawable/workoutimage"
                android:clipToOutline="true"
                android:src="@drawable/blankimg" />
            <TextView
                android:id="@+id/breakfasttext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:textSize="20sp"
                android:fontFamily="@font/myfont"
                android:text="@string/breakfast" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100sp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/lunch"
                android:layout_width="120sp"
                android:layout_height="120sp"
                android:scaleType="centerCrop"
                android:background="@drawable/workoutimage"
                android:clipToOutline="true"
                android:src="@drawable/blankimg" />
            <TextView
                android:id="@+id/lunchtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:textSize="20sp"
                android:fontFamily="@font/myfont"
                android:text="@string/lunch" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100sp"
            android:layout_marginEnd="15sp"
            android:orientation="vertical"
            android:layout_gravity="right"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/dinner"
                android:layout_width="120sp"
                android:layout_height="120sp"
                android:layout_gravity="right"
                android:scaleType="centerCrop"
                android:background="@drawable/workoutimage"
                android:clipToOutline="true"
                android:src="@drawable/blankimg" />
            <TextView
                android:id="@+id/dinnertext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:textSize="20sp"
                android:fontFamily="@font/myfont"
                android:text="@string/dinner" />

        </LinearLayout>

        <TextView
            android:id="@+id/todayworkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25sp"
            android:layout_marginTop="300sp"
            android:textSize="23sp"
            android:text="@string/todayWorkout" />

        <ImageButton
            android:id="@+id/workoutimg"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="15sp"
            android:layout_marginTop="350sp"
            android:background="@drawable/workoutimage"
            android:clipToOutline="true"
            android:scaleType="centerCrop"
            android:src="@drawable/blankimg" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="190sp"
            android:layout_marginTop="400sp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/wtype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/exerciseType" />

            <TextView
                android:id="@+id/workoutType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:textSize="14sp"
                android:text="@string/noexercise" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="190sp"
            android:layout_marginTop="460sp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/wtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/exerciseTime" />

            <TextView
                android:id="@+id/workoutTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:textSize="14sp"
                android:text="@string/noexercise" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>