<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calendarFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Free">

    <CalendarView
        android:id="@+id/calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/diet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31sp"
        android:layout_marginTop="365sp"
        android:textSize="15sp"
        android:text="@string/todayDiet" />

    <ImageButton
        android:id="@+id/breakfast"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:layout_marginStart="40sp"
        android:layout_marginTop="395sp"
        android:scaleType="centerCrop"
        android:background="@android:color/transparent"
        android:src="@drawable/nobreakfast" />



    <ImageButton
        android:id="@+id/lunch"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="395sp"
        android:scaleType="centerCrop"
        android:background="@android:color/transparent"
        android:src="@drawable/nolunch" />

    <ImageButton
        android:id="@+id/dinner"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:layout_gravity="right"
        android:layout_marginTop="395sp"
        android:layout_marginEnd="40sp"
        android:scaleType="centerCrop"
        android:background="@android:color/transparent"
        android:src="@drawable/nodinner" />


    <TextView
        android:id="@+id/todayworkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31sp"
        android:layout_marginTop="490sp"
        android:textSize="15sp"
        android:text="@string/todayWorkout" />

    <ImageButton
        android:id="@+id/workoutimg"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:background="@android:color/transparent"
        android:layout_marginStart="40sp"
        android:layout_marginTop="515sp"
        android:src="@drawable/noworkout" />

    <TextView
        android:id="@+id/wtype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180sp"
        android:layout_marginTop="555sp"
        android:textSize="12sp"
        android:text="@string/exerciseType" />

    <TextView
        android:id="@+id/workoutType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250sp"
        android:layout_marginTop="555sp"
        android:textSize="12sp"
        android:text="(운동 종류)" />

    <TextView
        android:id="@+id/wtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180sp"
        android:layout_marginTop="595sp"
        android:textSize="12sp"
        android:text="@string/exerciseTime" />

    <TextView
        android:id="@+id/workoutTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250sp"
        android:layout_marginTop="595sp"
        android:textSize="12sp"
        android:text="(운동 시간)" />

</FrameLayout>