<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_bottom_sheet"
    app:behavior_hideable="true"
    app:behavior_peekHeight="220dp"
    android:orientation="vertical"
    android:elevation="10dp"
    android:padding="10dp"
    android:clickable="true"
    android:focusable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:id="@+id/bar"
            android:layout_width="80dp"
            android:layout_height="4dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/dragbar"
            android:layout_gravity="center_horizontal"
            android:elevation="3dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="26sp">

            <ImageView
                android:id="@+id/calendarlogo"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/calendar"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/todaydate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/myfont"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="0000/00/00" />

            <View
                android:id="@+id/empty"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="centerCrop"/>
        </LinearLayout>



        <TextView
            android:id="@+id/diet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25sp"
            android:layout_marginTop="30sp"
            android:textSize="23sp"
            android:fontFamily="@font/myfont"
            android:text="@string/todayDiet" />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/breakfast"
                    android:layout_width="90sp"
                    android:layout_height="90sp"
                    android:scaleType="centerCrop"
                    android:background="@drawable/workoutimage"
                    android:clipToOutline="true"
                    android:src="@drawable/blankimg" />
                <TextView
                    android:id="@+id/breakfasttext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:textSize="20sp"
                    android:fontFamily="@font/myfont"
                    android:text="@string/breakfast" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/lunch"
                    android:layout_width="90sp"
                    android:layout_height="90sp"
                    android:scaleType="centerCrop"
                    android:background="@drawable/workoutimage"
                    android:clipToOutline="true"
                    android:src="@drawable/blankimg" />
                <TextView
                    android:id="@+id/lunchtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:textSize="20sp"
                    android:fontFamily="@font/myfont"
                    android:text="@string/lunch" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="right"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/dinner"
                    android:layout_width="90sp"
                    android:layout_height="90sp"
                    android:layout_gravity="right"
                    android:scaleType="centerCrop"
                    android:background="@drawable/workoutimage"
                    android:clipToOutline="true"
                    android:src="@drawable/blankimg" />
                <TextView
                    android:id="@+id/dinnertext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:textSize="20sp"
                    android:fontFamily="@font/myfont"
                    android:text="@string/dinner" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/todayworkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25sp"
            android:layout_marginTop="25sp"
            android:textSize="23sp"
            android:text="@string/todayWorkout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:layout_marginStart="15sp"
            android:layout_marginBottom="10sp"
            android:layout_marginEnd="15sp"
            android:layout_marginTop="20sp">

            <ImageButton
                android:id="@+id/workoutimg"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:background="@drawable/workoutimage"
                android:clipToOutline="true"
                android:scaleType="centerCrop"
                android:src="@drawable/blankimg" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/wtype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exerciseType"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/workoutType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35sp"
                    android:layout_marginTop="10sp"
                    android:text="@string/noexercise"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/wtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exerciseTime"
                    android:layout_marginTop="20sp"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/workoutTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35sp"
                    android:layout_marginTop="10sp"
                    android:text="@string/noexercise"
                    android:textSize="14sp" />
            </LinearLayout>



        </LinearLayout>


</LinearLayout>